--- a/forms.html
+++ b/forms.html
@@ -1,86 +1,21 @@
-<template name="Form">
-	{{#template withForm}}
-		{{autosave}}
-		{{> UI.contentBlock this}}
-	{{/template}}
+<template name="form">
+	{{#with item}}
+		{{#if template}}
+			{{#template}}
+				{{> UI.contentBlock this}}
+			{{/template}}
+		{{else}}
+			{{> UI.contentBlock this}}
+		{{/if}}
+	{{/with}}
 </template>
 
-<template name="__DefaultForm">
-	<form>
-		{{> UI.contentBlock}}
-	</form>
-</template>
-
-<template name="TextInput">
-	{{#if UI.contentBlock}}
-		{{> UI.contentBlock usefulField this ..}}
-	{{else}}
-		{{> template usefulField this ..}}
-	{{/if}}
-</template>
-
-<template name="__DefaultTextInput">
-	<input
-		type="{{#if type}}{{type}}{{else}}text{{/if}}"
-		name="{{name}}"
-		value="{{value}}"
-		placeholder="{{placeholder}}"
-		class="{{class}}"
-		>
-</template>
-
-<template name="DateInput">
-	{{#if UI.contentBlock}}
-		{{> UI.contentBlock usefulField this ..}}
-	{{else}}
-		{{> template usefulField this ..}}
-	{{/if}}
-</template>
-
-<template name="__DefaultDateInput">
-	<input
-		type="{{#if type}}{{type}}{{else}}date{{/if}}"
-		name="{{name}}"
-		value="{{value}}"
-		placeholder="{{placeholder}}"
-		class="{{class}}"
-		>
-</template>
-
-<template name="TimeInput">
-	{{#if UI.contentBlock}}
-		{{> UI.contentBlock usefulField this ..}}
-	{{else}}
-		{{> template usefulField this ..}}
-	{{/if}}
-</template>
-
-<template name="__DefaultTimeInput">
-	<input
-		type="{{#if type}}{{type}}{{else}}date{{/if}}"
-		name="{{name}}"
-		value="{{value}}"
-		placeholder="{{placeholder}}"
-		class="{{class}}"
-		>
-</template>
-
-<template name="SelectInput">
-	{{#if UI.contentBlock}}
-		{{> UI.contentBlock usefulField this ..}}
-	{{else}}
-		{{> template usefulField this ..}}
-	{{/if}}
-</template>
-
-<template name="__DefaultSelectInput">
-	<select
-		name="{{name}}"
-		placeholder="{{placeholder}}"
-		class="{{class}}"
-		>
-		{{#each options}}
-			<option value="{{_id}}">{{name}}</option>
-		{{/each}}
-	</select>
+<template name="input">
+	{{#with field ..}}
+		{{#if UI.contentBlock}}
+			{{> UI.contentBlock this}}
+		{{else}}
+			{{> template this}}
+		{{/if}}
+	{{/with}}
 </template>
